# ghascan

./: LICENSE  README.md  SECURITY.md  pyproject.toml
src/gha_vuln_scanner/: __init__.py  __main__.py  cli.py  constants.py  scanner.py  tokens.py
tests/: test_core.py
